--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "formik": "^2.4.5",
     "libphonenumber-js": "^1.10.53",
     "moment": "^2.29.4",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-camera": "^4.2.1",
-   "react-native-element-dropdown":"2.10.0",
+    "react-native-element-dropdown": "2.10.0",
     "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.15.0",
