--- a/ios/Podfile
+++ b/ios/Podfile
@@ -47,6 +47,7 @@ target 'plansaround' do
   pod 'GoogleMaps'
   pod 'Google-Maps-iOS-Utils'
   pod 'react-native-maps', path: '../node_modules/react-native-maps'
+  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
   target 'plansaroundTests' do
     inherit! :complete
     # Pods for testing
