--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "formik": "^2.4.5",
     "libphonenumber-js": "^1.10.53",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-camera": "^4.2.1",
+    "react-native-device-info": "^10.11.0",
     "react-native-element-dropdown": "2.10.0",
     "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
@@ -54,6 +55,7 @@
     "react-native-progress": "^5.0.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.2.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
