--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.18",
     "@reduxjs/toolkit": "^1.9.7",
+    "@stripe/stripe-react-native": "^0.35.1",
     "axios": "^1.6.1",
     "deprecated-react-native-prop-types": "^5.0.0",
     "formik": "^2.4.5",
