--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -111,7 +111,7 @@ dependencies {
     implementation 'com.google.mlkit:barcode-scanning:17.2.0'
     
     // implementation project(':react-native-community-geolocation')
-
+    implementation 'com.google.android.material:material:1.4.0'
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
